# AGNLab

./: .gitignore  README.md  project.toml  pyproject.toml  test_spectrum_refactor.py
agnfitlab/: ExploreEigenspectra.ipynb  __init__.py  cubefit.py  host.py  instrument.py  models.py  repo.txt  spectrum.py  tools.py  tools_old.py
agnfitlab/aux/: css_settings.css  css_settings_Table_Old.css
agnfitlab/responses/: MUSERSP.fits  rsps.yaml
agnlab/: __init__.py  cubefit.py  host.py  instrument.py  models.py  spectrum.py  tools.py
agnlab/eigenspectra/: SDSS_10GalaxySpectra_Yip2004.fits  SDSS_50AGNSpectra_Yip2004.fits
agnlab/lines_csv/: helium.csv
examples/: BuildMUSEresponse.ipynb  Test_LineModels.ipynb  Test_Models.ipynb  Test_Response.ipynb
myfantasy/: TestLAB_Voigt.ipynb  instrument.py  models.py
myfantasy/responses/: BuildMUSEresponse.ipynb  MUSERSP.fits
test/: GAMA_G09_Y1_GS1_080.txt  SDSS_spec-2770-54510-0433.txt  Tutorial.ipynb  spectrum_mc_pars.csv
test/lines/: broad.csv  coronal.csv  feII_model.csv  helium.csv  narrow_plus.csv
