[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agnfitlab"
version = "0.1.0"
description = "AGN spectral fitting tools"
authors = [
    { name = "Pierpaolo", email = "pierpaolo.condo@gmail.com" }
    ]

dependencies = [
    "fantasy_agn"
]
requires-python = ">=3.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
agnfitlab = ["responses/*"]