[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agnlab"
version = "0.1.0"
description = "AGN spectral handling tools"
authors = [
    { name = "Pierpaolo", email = "pierpaolo.condo@gmail.com" }
    ]

dependencies = [
    "sherpa>=4.17",
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "PyYAML>=5.0",
    "pandas>=1.3",
    "adjustText",
    "PyAstronomy>=0.17",
    "sfdmap2",
    "tqdm>=4.0",
    "dill",
    "multiprocess>=0.70",
    "astropy>=5.0",
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
agnlab = [
    "responses/*",
    "lines_csv/*",
    "eigenspectra/*",
    "aux/*",
    "sfddata/*"
]